--- a/c112.ipynb
+++ b/c112.ipynb
@@ -6,7 +6,7 @@
       "name": "c112",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOhLvU6vOyQv8TcA6BECSVO",
+      "authorship_tag": "ABX9TyNsqW3k+HAA0sNkblpUHmBX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,8 +178,8 @@
         "for data in savings_data:\n",
         "  all_savings.append(float(data[0]))\n",
         "\n",
-        "print(f\"Mean of savings - {statistics.mean(all_savings)}\")\n",
-        "print(f\"Median of savings - {statistics.median(all_savings)}\")\n",
+        "print(\"Mean of savings -\", statistics.mean(all_savings))\n",
+        "print(\"Median of savings\" +str(statistics.median(all_savings))\")\n",
         "print(f\"Mode of savings - {statistics.mode(all_savings)}\")"
       ],
       "metadata": {
