--- a/116.ipynb
+++ b/116.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3kMtgAw+pQIpMXrpYKj1H",
+      "authorship_tag": "ABX9TyP1JcWOGHznOW6hTAnOTzBU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -99,8 +99,8 @@
         "\n",
         "salaries = df[\"EstimatedSalary\"].tolist()\n",
         "ages = df[\"Age\"].tolist()\n",
+        "purchased = df[\"Purchased\"].tolist() #[0,1,0,1..]\n",
         "\n",
-        "purchased = df[\"Purchased\"].tolist()\n",
         "colors=[]\n",
         "for data in purchased:\n",
         "  if data == 1:\n",
@@ -126,7 +126,7 @@
         "id": "AScmDvKHYEQW",
         "outputId": "5347ff0d-affd-4f83-e65c-0336fb8711c5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "18L_UpoAYItO"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "lO4IvZG3YNG7"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "HxUN9cO-YO0z"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
         "id": "zKCW9dg9YVAs",
         "outputId": "32effc2c-dcbb-4b0f-b943-e3d42a211cea"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "id": "OKZPoSheY5Jx",
         "outputId": "3da0f9d6-0df5-4ae1-c1e7-00cc6ed2deb5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
